# descarteslabs-vector

./: CHANGELOG.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: pypi.yaml
cli/: README.md  __main__.py  expressions.py  sharing.py
cli/testing/: create_table_test.toml  ingest_feature_list.json  list_features_test.json
descarteslabs/vector/: __init__.py  common.py  features.py  layers.py  models.py  products.py  tiles.py  util.py  vector.py  vector_exceptions.py
vector/: __init__.py  common.py  products.py  property_filtering.py  tiles.py  vector.py
