[tool.poetry]
name = "vector"
version = "0.1.0"
description = ""
authors = ["Descartes Labs"]
readme = "README.md"
packages = [
    { include = "descarteslabs" },
]

[tool.poetry.dependencies]
python = "~3.8"
descarteslabs = {url = "https://github.com/descarteslabs/descarteslabs-python/archive/refs/tags/v2.0.0rc3.zip#egg=descarteslabs"}
ipyleaflet = "^0.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
