[tool.poetry]
name = "descarteslabs-vector"
version = "0.1.0"
description = ""
authors = ["Descartes Labs"]
readme = "README.md"
packages = [
    { include = "descarteslabs" },
]

[tool.poetry.dependencies]
python = ">= 3.8, < 3.12"
ipyleaflet = "^0.17.2"
descarteslabs = "^2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
