[tool.poetry]
name = "descarteslabs-vector"
version = "0.1.0"
description = ""
authors = ["Descartes Labs"]
readme = "README.md"
packages = [
    { include = "descarteslabs" },
    { include = "cli" },
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">= 3.8, < 3.12"
ipyleaflet = "^0.17.2"
descarteslabs = "^2"
click = "^8.1.3"
toml = "^0.10.2"
backoff = "^2.2.1"
pydantic = "^2.1.1"

[tool.poetry.scripts]
cli = 'cli:__main__.py'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
